
sbin_PROGRAMS = extfs

extfs_SOURCES = \
  bitmap.c \
  block.c \
  dir.c \
  dir_delete.c \
  dir_enter.c \
  dir_isempty.c \
  dir_lookup.c \
  globals.c \
  group_descriptors.c \
  init.c \
  inode.c \
  inode_cache.c \
  link.c \
  main.c \
  ops_dir.c \
  ops_file.c \
  ops_link.c \
  ops_prot.c \
  read.c \
  superblock.c \
  truncate.c \
  utility.c \
  write.c

extfs_LDADD = -lblockdev

AM_CFLAGS = -O0 -std=c99 -g2 -march=armv8-a
#-march=armv7ve



